# llm-foundry

./: .gitignore  AGENTS.md  EXPLAINER.md  README.md  USAGE.md  benchmark.json  benchmark.md  model-run.json  paper.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  index.html  styles.css
examples/: corpus.txt
reports/: coding.json  coding.md  memory.json  memory.md  reasoning.json  reasoning.md  tool_use.json  tool_use.md
scripts/: export_traces.py  run_benchmarks.py  train.py
src/llm_foundry/: __init__.py  adapters.py  agent.py  benchmarks.py  cascade.py  cli.py  config.py  core.py  datasets.py  embeddings.py  evaluation.py  harnesses.py  memory.py  model_training.py  rag.py  reasoning.py  safety.py  scratch.py  studio.py  super_suit.py  tokenizer.py  training.py
tests/: test_benchmarks.py  test_core.py  test_studio.py  test_super_suit.py
